welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:51: error: Unmatched closing brace '}' ignored here
}
^